# tomopackets

./: .gitignore  CMakeCache.txt  CMakeLists.txt  py_tomop.cp311-win_amd64.pyd  py_tomop.pyd  setup.py
conda/: build_environment.yml  conda_build_config.yaml  meta.yaml
include/tomop/: bidirectional.hpp  descriptors.hpp  imaging_server.hpp  publisher.hpp  server.hpp  tomop.hpp
include/tomop/packets/: imaging_packets.hpp
scripts/: basic_usage.ipynb
tomop/: module.cpp
tomopackets.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
